--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/davidaq/aq-web-front-node/issues"
   },
-  "homepage": "https://github.com/davidaq/aq-web-front-node"
+  "homepage": "https://github.com/davidaq/aq-web-front-node",
+  "dependencies": {
+    "chokidar": "^1.3.0",
+    "esprima": "^2.7.0",
+    "node-sass": "^3.4.2",
+    "typescript-compiler": "^1.4.1-2",
+    "underscore": "^1.8.3",
+    "yargs": "^3.30.0"
+  }
 }
