--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/davidaq/aq-web-front-node",
   "dependencies": {
+    "babel-core": "^6.2.1",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "chokidar": "^1.3.0",
     "esprima": "^2.7.0",
     "node-sass": "^3.4.2",
-    "typescript-compiler": "^1.4.1-2",
     "underscore": "^1.8.3",
     "yargs": "^3.30.0"
   }
