--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "chokidar": "^1.3.0",
+    "combine-source-map": "^0.7.1",
     "esprima": "^2.7.0",
     "node-sass": "^3.4.2",
     "underscore": "^1.8.3",
