--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "babel-preset-stage-0": "^6.1.18",
     "chokidar": "^1.3.0",
     "concat-stream": "^1.5.1",
+    "sass.js": "^0.9.4",
     "sourcemap-codec": "^1.2.1",
     "underscore": "^1.8.3",
+    "yamljs": "^0.2.4",
     "yargs": "^3.30.0"
   }
 }
