--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "babel-preset-stage-0": "^6.1.18",
     "chokidar": "^1.3.0",
     "concat-stream": "^1.5.1",
+    "json-tokenizer": "^1.0.1",
+    "jsonlint": "^1.6.2",
     "sass.js": "^0.9.4",
     "sourcemap-codec": "^1.2.1",
     "traceback": "^0.3.1",
