--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chokidar": "^1.3.0",
     "concat-stream": "^1.5.1",
     "json-tokenizer": "^1.0.1",
+    "nib": "^1.1.0",
     "sourcemap-codec": "^1.2.1",
     "stylus": "^0.52.4",
     "traceback": "^0.3.1",
