--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-transform-es2015-template-literals": "^6.1.18",
     "babel-plugin-transform-es2015-typeof-symbol": "^6.1.18",
     "babel-plugin-transform-es2015-unicode-regex": "^6.1.18",
+    "babel-plugin-transform-jscript": "^6.3.13",
     "babel-plugin-uglify": "^1.0.2",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
