--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aq-web-front",
   "version": "0.0.1",
-  "description": "A compilation framework to allow coding web frontends in OO style.",
+  "description": "A compilation framework to allow coding web frontends in a modern style.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,7 +30,6 @@
     "babel-plugin-transform-es2015-computed-properties": "^6.1.18",
     "babel-plugin-transform-es2015-constants": "^6.1.4",
     "babel-plugin-transform-es2015-destructuring": "^6.1.18",
-    "babel-plugin-transform-es2015-for-of": "^6.1.18",
     "babel-plugin-transform-es2015-function-name": "^6.1.18",
     "babel-plugin-transform-es2015-literals": "^6.1.18",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
@@ -44,7 +43,6 @@
     "babel-plugin-transform-es2015-unicode-regex": "^6.1.18",
     "babel-plugin-transform-jscript": "^6.3.13",
     "babel-plugin-uglify": "^1.0.2",
-    "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "chokidar": "^1.3.0",
@@ -53,7 +51,6 @@
     "nib": "^1.1.0",
     "sourcemap-codec": "^1.2.1",
     "stylus": "^0.52.4",
-    "traceback": "^0.3.1",
     "underscore": "^1.8.3",
     "uuid": "^2.0.1",
     "yamljs": "^0.2.4",
