--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "concat-stream": "^1.5.1",
     "json-tokenizer": "^1.0.1",
     "nib": "^1.1.0",
+    "prompt": "^0.2.14",
     "sourcemap-codec": "^1.2.1",
     "stylus": "^0.52.4",
     "underscore": "^1.8.3",
@@ -58,6 +59,6 @@
     "yargs": "^3.30.0"
   },
   "bin": {
-      "awf": "bin/awf"
+    "awf": "bin/awf"
   }
 }
