--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aq-web-front",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "A compilation framework to allow coding web frontends in a modern style.",
   "main": "index.js",
   "scripts": {
@@ -48,6 +48,7 @@
     "chokidar": "^1.3.0",
     "concat-stream": "^1.5.1",
     "json-tokenizer": "^1.0.1",
+    "jsx-control-statements": "^3.0.0",
     "nib": "^1.1.0",
     "prompt": "^0.2.14",
     "sourcemap-codec": "^1.2.1",
